# selectable_NIC_hotspot

./: .gitignore  README.md  main.py  pyproject.toml
src/: choose_nic.py  main.py  nic_manager.py  window.py
src/adapter/: choose_nic.py  nic_manager.py
src/gui/: nic_selector_app.py
