[project]
name = "selectable-nic-hotspot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet>=0.27.6",
    "flet-desktop>=0.27.6",
    "logging>=0.4.9.6",
    "pythonnet>=3.0.5",
    "pywin32>=310",
    "wmi>=1.5.1",
]
